2001-06-07  Almer S. Tigelaar  <almer@gnome.org>

	* src/workbook-control.h: Add MS_CONSOLIDATE.

	* src/workbook-edit.c (wbcg_edit_attach_guru): Call
	wb_control_menu_state_update
	(wbcg_edit_detach_guru): Idem.

	* src/workbook-control-gui-priv.h: Add consolidation
	menu item.
	
	* src/workbook-control-gui.c (wbcg_menu_state_update): Add
	consolidation menu item.
	(workbook_control_gui_init): Initialize consolidation
	menu item.

2001-06-06  Almer S. Tigelaar  <almer@gnome.org>

	* src/stf.c (stf_read_workbook): Fix warning.

2001-06-06  Almer S. Tigelaar  <almer@gnome.org>

	* src/gnumeric.h : Add new GlobalRange.

	* src/ranges.[ch] (global_range_new): Create a new globalrange.
	(global_range_free): Free.
	(global_range_overlap): Utility function.
	(global_range_dup): Idem.

	* src/sheet.[ch] (sheet_cell_get_value): New function.
	
	* src/workbook-control-gui.c (cb_data_consolidate) :
	Entry point for the data consolidation dialog.
	
	* src/GNOME_Gnumeric.xml : Add consolidate menu item.
	
	* src/commands.c (cmd_consolidate) : Undo/redo for consolidate.
	(cmd_consolidate_destroy) : Idem.
	(cmd_consolidate_redo) : Idem.
	(cmd_consolidate_undo) : Idem.

	* src/consolidate.[ch] : Consolidation low-level code.

2001-06-05  Zbigniew Chyla  <cyba@gnome.pl>

	* src/gnumeric-util.[ch] (gnumeric_dialog_file_selection): New
	function, some code moved from gui-file.c.

	* src/workbook.[ch] (workbook_get_filename): New accessor function.

	* src/gui-file.h
	(gui_file_open): New function.
	(gui_file_import): Removed fname argument.

	* src/gui-file.c
	(gui_file_import): Create and open file selector, using
	gnumeric_dialog_file_selection to display it. Use one dialog to select
	file and file format, we don't need glade file anymore. Optionally
	show all registered openers as importers.
	(gui_file_save_as): Uses gnumeric_dialog_file_selection. Take
	workbook's current saver if current_saver is NULL (previously we've
	been loosing this information), use